feat: sistema completo de logs con MongoDB - incluye logs de Redis, Neo4j, MongoDB y WebSocket con queries, estadisticas y endpoints especializados